h tag color change for content

--- a/src/assets/scss/core/base/_typography.scss
+++ b/src/assets/scss/core/base/_typography.scss
@@ -199,6 +199,12 @@ strong {
 	@include font-weight(strong);
 }
 
+.content-typo{
+	h1,h2,h3, h4, h5, h6, .h3, .h4, .h5, .h6 {
+		font-weight: 700;
+		color:  #085d88
+	}
+}
 .invert-color {
 	color: color(base-inverse);
 
