--- a/src/assets/scss/core/layout/_header.scss
+++ b/src/assets/scss/core/layout/_header.scss
@@ -98,7 +98,7 @@
 			right: 0;
 			top: 100%;
 			z-index: 9999;
-			background: color-bg(menu-mobile);
+			background: #ffffff;
 			max-height: 0;
 	        opacity: 0;
 	        overflow: hidden;
