--- a/src/assets/scss/core/base/_base.scss
+++ b/src/assets/scss/core/base/_base.scss
@@ -125,3 +125,102 @@ td {
 		border-bottom: 1px solid color-border(divider-inverse);
 	}
 }
+
+.lds-ellipsis {
+	display: inline-block;
+	position: relative;
+	width: 80px;
+	height: 80px;
+  }
+  .lds-ellipsis div {
+	position: absolute;
+	top: 33px;
+	width: 13px;
+	height: 13px;
+	border-radius: 50%;
+	background: #1b98d5;
+	animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .lds-ellipsis div:nth-child(1) {
+	left: 8px;
+	animation: lds-ellipsis1 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(2) {
+	left: 8px;
+	animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(3) {
+	left: 32px;
+	animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(4) {
+	left: 56px;
+	animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+	0% {
+	  transform: scale(0);
+	}
+	100% {
+	  transform: scale(1);
+	}
+  }
+  @keyframes lds-ellipsis3 {
+	0% {
+	  transform: scale(1);
+	}
+	100% {
+	  transform: scale(0);
+	}
+  }
+  @keyframes lds-ellipsis2 {
+	0% {
+	  transform: translate(0, 0);
+	}
+	100% {
+	  transform: translate(24px, 0);
+	}
+  }
+  .notify{
+	  padding: .875rem 1rem;
+    font-size: .875rem;
+    line-height: 1.5;
+	border-radius: .3rem;
+  }
+.notify-lg{
+	color: #fff;
+    background-color: #2196F3;
+    box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
+  }
+
+.fixedsocial {
+    top:80%;
+    height:200px;
+    width:100px;
+    position:fixed;
+}
+
+.facebookflat {
+    
+    height:50px;
+    width:50px;
+   transition:ease 500ms;
+    background-size:50px;
+    opacity:1;
+}
+
+.facebookflat:hover {
+    height:80px;
+    width:80px;
+    background-size:60px;
+    transition:ease 500ms;
+    margin-right:-20px;
+    width:70px;
+
+}
+
+.header-nav a:not(.button) :active{
+    display: block;
+    color: #1b98d5;
+    font-weight: 500;
+}
